# simple-shell

./: .clang-format  .gitignore  CMakeLists.txt
include/: shell.h
src/: main.c  shell.c
